
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int device_t ;


 int BUS_PROBE_VENDOR ;
 int ENXIO ;
 int device_set_desc (int ,char*) ;
 int ofw_bus_is_compatible (int ,char*) ;
 int ofw_bus_status_okay (int ) ;

__attribute__((used)) static int
hisi_dwmmc_probe(device_t dev)
{

 if (!ofw_bus_status_okay(dev))
  return (ENXIO);

 if (!ofw_bus_is_compatible(dev, "hisilicon,hi6220-dw-mshc"))
  return (ENXIO);

 device_set_desc(dev, "Synopsys DesignWare Mobile "
     "Storage Host Controller (HiSilicon)");

 return (BUS_PROBE_VENDOR);
}
